# HieraSynth_OOPSLA25_Artifact

./: .dockerignore  .gitignore  Dockerfile  README.md
hierasynth/: .dockerignore  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  hierasynth.cabal  package.yaml  stack.yaml
hierasynth/arith/: Arith.hs  Main.hs
hierasynth/arith-sum/: Arith.hs  EvalMode.hs  Main.hs
hierasynth/control/: ConProg.hs  Main.hs  Semantics.hs  Sketch.hs  Typing.hs  Value.hs
hierasynth/test/: Main.hs
rvv-synthesizer/: .dockerignore  a.dot  convert_csv.py  fig_10_with_72_core.sh  fig_10_with_8_core.sh  fig_11.sh  fig_14_15_with_72_core.sh  fig_14_15_with_8_core.sh  fig_1_12.sh  fig_9_with_72_core.sh  fig_9_with_8_core.sh  flake.nix  hie.yaml  kissat.patch  package.yaml  post_1_2_4_core_easy_jobs.sh  post_1_2_4_core_extra_easy_jobs.sh  post_8_core_easy_jobs.sh  post_8_core_extra_easy_jobs.sh  post_all_jobs.sh  redis.conf  rvv-synthesizer.cabal  stack.yaml  start_redis.sh  start_runner_72_core.sh  start_runner_8_core.sh  table_1.sh
rvv-synthesizer/add_sub/: Main.hs  add_sub.ll  add_sub.sir
rvv-synthesizer/concat/: Main.hs  concat.ll  concat.sir
rvv-synthesizer/cpp/: CMakeLists.txt  post_process.sh
rvv-synthesizer/cpp/src/: add_sub.cpp  compare.cpp  concat.cpp  insert_block.cpp  insert_lane.cpp  min_max_128.cpp  mul_even_odd.cpp  odd_even_blocks.cpp  type.h  vqsort.cpp  zero_extend_resize_bit_cast.cpp
rvv-synthesizer/hacker/: InferredSketch.hs  Main.hs  OptimalSketch.hs  OriginalSketch.hs  StdLibSketch.hs  problems.sir
rvv-synthesizer/insert_lane/: Main.hs  insert_lane.ll  insert_lane.sir
rvv-synthesizer/l444_alpha_to_argb_row/: Main.hs  l444_alpha_to_argb_row.sir
rvv-synthesizer/lt128/: Concrete.hs  Main.hs  RestartTest.hs  Sketch.hs  Spec.hs  Types.hs  compare.ll  compare.sir
rvv-synthesizer/min_max_128/: Main.hs  min_max_128.ll  min_max_128.sir
rvv-synthesizer/mul_even_odd/: Main.hs  mul_even_odd.ll  mul_even_odd.sir
rvv-synthesizer/slicer/: CMakeLists.txt  gen.sh
rvv-synthesizer/slicer/include/Converter/: ConvertedOperand.h  Converter.h  VectorLengthOrigin.h  VectorLengthState.h
rvv-synthesizer/slicer/include/Operator/: Common.h  Compare.h  ElementIndex.h  Extract.h  Insert.h  MaskReduction.h  Merge.h  MoveScalarFromVector.h  MoveToVector.h  NarrowingFixedPointClip.h  NarrowingRightShift.h  Operator.h  Reinterpret.h  ScalarIntegerBinary.h  ScalarIntegerTrunc.h  ScalarLongInteger.h  SetMaskBit.h  SetRelayedVectorLength.h  SetVectorLength.h  SingleWidthIntegerBinary.h  Slide.h  VectorLengthAsScalar.h  VectorRegisterByteLength.h  WideningIntegerBinary.h  WideningIntegerMultiplyAdd.h
rvv-synthesizer/slicer/include/Program/: ParensWrappedList.h  Program.h  ProgramArgument.h  ProgramStatement.h
rvv-synthesizer/slicer/include/Slicer/: Slice.h
rvv-synthesizer/slicer/include/Slicer/Filter/: NoSingleUseScalar.h  NoVectorLengthInput.h
rvv-synthesizer/slicer/include/Type/: DestinationConfig.h  FixedPointRoundingMode.h  Immediate.h  MaskingConfig.h  Policy.h  RISCVType.h  Ratio.h  Reference.h  VectorConfig.h
rvv-synthesizer/slicer/include/Util/: Formatting.h
rvv-synthesizer/slicer/lib/Converter/: Converter.cpp
rvv-synthesizer/slicer/lib/Operator/: Common.cpp  Compare.cpp  ElementIndex.cpp  Extract.cpp  Insert.cpp  MaskReduction.cpp  Merge.cpp  MoveScalarFromVector.cpp  MoveToVector.cpp  NarrowingFixedPointClip.cpp  NarrowingRightShift.cpp  Reinterpret.cpp  ScalarIntegerBinary.cpp  ScalarIntegerTrunc.cpp  SetMaskBit.cpp  SetVectorLength.cpp  SingleWidthIntegerBinary.cpp  Slide.cpp  VectorRegisterByteLength.cpp  WideningIntegerBinary.cpp  WideningIntegerMultiplyAdd.cpp
rvv-synthesizer/slicer/lib/Slicer/: Slice.cpp
rvv-synthesizer/slicer/lib/Slicer/Filter/: NoSingleUseScalar.cpp  NoVectorLengthInput.cpp
rvv-synthesizer/slicer/lib/Type/: Ratio.cpp
rvv-synthesizer/slicer/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
rvv-synthesizer/slicer/test/Converter/: compare.ll  empty_func.ll  merged_constant.ll  misc_mask.ll  name_collison.ll  narrowing_shr.ll  scalar.ll  single_width.ll  vget.ll  vid.ll  vlenb.ll  vmerge.ll  vmv.ll  vnclip.ll  vreinterpret.ll  vset.ll  vsetvl_interleaving.ll  vsetvli_basic.ll  vsetvlimax_basic.ll  vslide.ll  widening.ll  widening_fma.ll
rvv-synthesizer/slicer/tools/: converter.cpp  slicer.cpp
(+1526 files in other folders)
